--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
                     </div>
                 </div>
             </div>
-            <!--Serviços da empres -->
-            <div id="services-reaa">
+            <!--Serviços da empresa -->
+            <div id="services-area">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
@@ -160,7 +160,76 @@
                     </div>
                 </div>
             </div>
+            <!-- Dados da empresa-->
+            <div id="data-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-3 circle-box">
+                            <div id="circleA"></div>
+                            <p>Projetos Entregues</p>
+                        </div>
+                        <div class="col-md-3 circle-box">
+                            <div id="circleB"></div>
+                            <p>Clientes Felizes</p>
+                        </div>
+                        <div class="col-md-3 circle-box">
+                            <div id="circleC"></div>
+                            <p>Colaboradores</p>
+                        </div>
+                        <div class="col-md-3 circle-box">
+                            <div id="circleD"></div>
+                            <p>Cafézinhos</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <!-- Time -->
+            <div id="team-area">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 class="main-title">Nosso Time</h3>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile1.jpg" class="card-img-top" alt="Imagem de Perfil 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Jhon Doe</h5>
+                                    <p class="card-text">Software Developer</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile2.jpg" class="card-img-top" alt="Imagem de Perfil 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Maria Mariana</h5>
+                                    <p class="card-text">Seo Consultant</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile3.jpg" class="card-img-top" alt="Imagem de Perfil 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Paul Baker</h5>
+                                    <p class="card-text">Project Manager</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card">
+                                <img src="img/profile4.jpg" class="card-img-top" alt="Imagem de Perfil 1">
+                                <div class="card-body">
+                                    <h5 class="card-title">Karina Katarina</h5>
+                                    <p class="card-text">UX/UI Manager</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
    </main>
     <script src="js/script.js"></script>
