--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
    <header>
     <div class="container" id="nav-container">
-        <nav class="navbar navbar-expand-lg fixed-top">
+        <nav class="navbar navbar-expand-lg fixed-top navbar-dark">
             <a href="#" class="navbar-brand">
                 <img id="logo" src="img/hdcagency_logo.svg" alt="hDC Agency"> hDC Agency
             </a>
@@ -350,7 +350,7 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-md-12">
-                                <p>Desenvolvimento por <a href="https://wwww.horadecodar.com.br" target="_blank">hDC Agency</a> &copy; 2020</p>
+                                <p>Desenvolvimento por <a href="https://wwww.horadecodar.com.br" target="_blank">hDC Agency</a> &copy; 2023</p>
                             </div>
                         </div>
                     </div>
